objects/ScCollection_Bucket_Movement_Data__c.object
<CustomObject>
    <description>used for Roll Rate Report Data capture</description>
    <fields>
        <fullName>ScCollection_30_Contract_Ids__c</fullName>
        <label>30+ Contract Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_30_Count__c</fullName>
        <label>30+ Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Bucket_1_Contract_Ids__c</fullName>
        <label>Bucket 1 Contract Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Bucket_1_Count__c</fullName>
        <label>Bucket 1 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Collector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bucket_Movement_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Movement_Date__c</fullName>
        <label>Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_No_Movement_Balance__c</fullName>
        <label>No Movement Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_No_Movement_Count__c</fullName>
        <label>No Movement Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_No_Movement_Per__c</fullName>
        <formula>ScCollection_No_Movement_Count__c/(ScCollection_Bucket_1_Count__c + ScCollection_30_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Movement %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Down_Balance__c</fullName>
        <label>Rolled Down Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Down_Contract_Id__c</fullName>
        <label>Rolled Down Contract Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Down_Count__c</fullName>
        <label>Rolled Down Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Down_Per__c</fullName>
        <formula>ScCollection_Rolled_Down_Count__c/(ScCollection_Bucket_1_Count__c + ScCollection_30_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolled Down %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Up_Balance__c</fullName>
        <label>Rolled Up Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Up_Contract_Id__c</fullName>
        <label>Rolled Up Contract Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Up_Count__c</fullName>
        <label>Rolled Up Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_Up_Per__c</fullName>
        <formula>ScCollection_Rolled_Up_Count__c/(ScCollection_30_Count__c + ScCollection_Bucket_1_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolled Up %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Balance__c</fullName>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bucket Movement Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Collector__c</columns>
        <columns>ScCollection_Movement_Date__c</columns>
        <columns>ScCollection_Bucket_1_Count__c</columns>
        <columns>ScCollection_30_Count__c</columns>
        <columns>ScCollection_Total_Balance__c</columns>
        <columns>ScCollection_Rolled_Up_Count__c</columns>
        <columns>ScCollection_Rolled_Down_Count__c</columns>
        <columns>ScCollection_No_Movement_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ScCollection_Collector__c</field>
            <operation>equals</operation>
            <value>Jose Corpus</value>
        </filters>
        <filters>
            <field>ScCollection_Movement_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/8/2017</value>
        </filters>
        <filters>
            <field>ScCollection_Movement_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2017</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{00000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bucket Movement Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>